--- a/power/src/app/app.component.scss
+++ b/power/src/app/app.component.scss
@@ -32,8 +32,8 @@
     background-color: #343a40;
 }
 
-footer li:before {
-    content: "\00BB \0020";
+footer li::before {
+    content: '\00BB \0020';
 }
 
 @media (max-width: 576px) {
