--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -246,7 +246,8 @@
         </alert>
     </div>
 
-    <div (mouseenter)="isCollapsed = true; isCollapsedBRW = true; isCollapsedImmo = true; isCollapsedAcc = true;">
+    <div (mouseenter)="isCollapsed = true; isCollapsedBRW = true; isCollapsedImmo = true; isCollapsedAcc = true;"
+         class="min-height">
         <router-outlet></router-outlet>
     </div>
 
@@ -305,17 +306,17 @@
             </div>
         </footer>
     </div> -->
-    <div class="container-fluid bg-custom text-white">
-        <footer class="pt-5 pb-2 px-md-5 overflow-hidden">
+    <div class="container-fluid p-0 m-0">
+        <footer class="pt-5 pb-2 px-1 px-md-5 overflow-hidden">
             <div *ngIf="router.url.includes('/forms/fillout/form/') || router.url.includes('/forms/editor/')"
-                 class="row justify-content-end mr-3 mr-md-0">
-                <div class="col text-right">
-                    <p class="text-white"
+                 class="row justify-content-end mr-1 mr-md-0">
+                <div class="col text-right p-1 m-0">
+                    <p class="text-muted"
                        i18n>* Pflichtfeld</p>
                 </div>
             </div>
-            <div class="row border-top pt-3 mx-3 mx-md-0">
-                <div class="col-12 col-md-6 col-lg-4">
+            <div class="row border-top pt-3 mx-1 mx-md-0">
+                <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
                     <h5 i18n>Informationen</h5>
                     <ul class="list-unstyled text-small">
                         <li class="my-1">
@@ -341,7 +342,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-6 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4 p-1 m-0">
                     <h5 id="languages"
                         aria-label="Sprachauswahl"
                         i18n-aria-label
@@ -361,7 +362,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="col-12 col-md-12 col-lg-4">
+                <div class="col-12 col-md-12 col-lg-4 p-1 m-0">
                     <!-- Only for Modules Bodenrichtwerte/Bodenwertkalkulator -->
                     <div *ngIf="router.url.includes('/bodenrichtwerte') || router.url.includes('/bodenwertkalkulator')">
                         <h5 id="borisInfo"
@@ -401,9 +402,9 @@
                     </div>
                 </div>
             </div>
-            <div class="row justify-content-center border-top mx-3 mx-md-0">
-                <div class="col p-3">
-                    <p class="text-white text-center">
+            <div class="row justify-content-center border-top mx-1 mx-md-0">
+                <div class="col pt-2 p-1 p-md-3 p-1 m-0">
+                    <p class="text-center">
                         <span i18n>Version</span>: {{ appVersion.branch }}/{{ appVersion.version }}
                     </p>
                 </div>
