fixed linter warnings

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -403,7 +403,7 @@
                 </div>
             </div>
             <div class="row justify-content-center border-top mx-1 mx-md-0">
-                <div class="col pt-2 p-1 p-md-3 p-1 m-0">
+                <div class="col pt-2 p-1 p-md-3 m-0">
                     <p class="text-center">
                         <span i18n>Version</span>: {{ appVersion.branch }}/{{ appVersion.version }}
                     </p>
