--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -77,13 +77,13 @@
             <div class="row">
                 <div *ngIf="!adresse && !features"
                      class="text-center p-0"
-                     [class]="isCollapsed ? 'col-12' : 'col-10'">
+                     [class]="isCollapsed ? 'col-12' : 'col-12 col-sm-10'">
                     <h5 class="m-3 mx-center"
                         i18n>Wählen Sie eine Position</h5>
                 </div>
                 <div *ngIf="!adresse && features && features.features.length"
                      class="text-center p-0"
-                     [class]="isCollapsed ? 'col-12' : 'col-10'">
+                     [class]="isCollapsed ? 'col-12' : 'col-12 col-sm-10'">
                     <button class="btn btn-collapse w-100"
                             type="button"
                             (click)="isCollapsed = !isCollapsed"
@@ -98,7 +98,7 @@
                 </div>
                 <div *ngIf="!adresse && features && !features.features.length"
                      class="text-center p-0"
-                     [class]="isCollapsed ? 'col-12' : 'col-10'">
+                     [class]="isCollapsed ? 'col-12' : 'col-12 col-sm-10'">
                     <button class="btn btn-collapse w-100"
                             type="button"
                             (click)="isCollapsed = !isCollapsed"
@@ -114,7 +114,7 @@
                 </div>
                 <button *ngIf="adresse"
                         class="btn btn-collapse p-0 w-100"
-                        [class]="isCollapsed ? 'col-12' : 'col-10'"
+                        [class]="isCollapsed ? 'col-12' : 'col-12 col-sm-10'"
                         type="button"
                         (click)="isCollapsed = !isCollapsed"
                         [attr.aria-expanded]="!isCollapsed"
@@ -125,11 +125,11 @@
                          alt="Einklappen/ausklappen"
                          i18n-alt>
                 </button>
-                <div class="col-2 p-0 d-flex justify-content-end"
+                <div class="col-12 col-sm-2 p-0 d-flex justify-content-end"
                      *ngIf="!isCollapsed">
                     <a *ngIf="features?.features.length"
                        class="nav-link btn p-1 align-self-center"
-                       type="button"
+                       role="button"
                        [href]="printURL()"
                        target="_blank"
                        rel="noopener noreferrer nofollow"
@@ -233,3 +233,4 @@
             </div>
         </div>
     </div>
+</div>
