--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -133,6 +133,7 @@
                        [href]="printURL()"
                        target="_blank"
                        rel="noopener noreferrer nofollow"
+                       alt="Bodenrichtwerte - amtlicher Ausdruck"
                        title="Bodenrichtwerte - amtlicher Ausdruck"
                        i18n-title>
                         <svg xmlns="http://www.w3.org/2000/svg"
@@ -147,6 +148,8 @@
                             <path
                                   d="M5 1a2 2 0 0 0-2 2v2H2a2 2 0 0 0-2 2v3a2 2 0 0 0 2 2h1v1a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2v-1h1a2 2 0 0 0 2-2V7a2 2 0 0 0-2-2h-1V3a2 2 0 0 0-2-2H5zM4 3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1v2H4V3zm1 5a2 2 0 0 0-2 2v1H2a1 1 0 0 1-1-1V7a1 1 0 0 1 1-1h12a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v-1a2 2 0 0 0-2-2H5zm7 2v3a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h6a1 1 0 0 1 1 1z" />
                         </svg>
+                        <span class="d-none"
+                              aria-hidden="true">Bodenrichtwerte - amtlicher Ausdruck </span>
                     </a>
                     <button class="nav-link btn py-1 px-3 align-self-center"
                             [ngClass]="{'active': hintsActive}"
