--- a/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-verlauf/bodenrichtwert-verlauf.component.html
@@ -30,31 +30,21 @@
             <caption i18n>Zeitliche Entwicklung Bodenrichtwerte</caption>
             <thead>
                 <tr>
-                    <th role="columnheader"
-                        scope="col"
+                    <th scope="col"
                         i18n> Nutzungsart </th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[0].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[1].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[2].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[3].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[4].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[5].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[6].stag }}</th>
-                    <th role="columnheader"
-                        scope="col">{{ seriesTemplate[7].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[0].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[1].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[2].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[3].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[4].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[5].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[6].stag }}</th>
+                    <th scope="col">{{ seriesTemplate[7].stag }}</th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let t of srTableData; let i=index">
-                    <th role="rowheader"
-                        scope="row">{{ srTableHeader[i] }}</th>
+                    <th scope="row">{{ srTableHeader[i] }}</th>
                     <td *ngFor="let serie of t.series">{{ serie.brw }}</td>
                 </tr>
             </tbody>
