fixed linter problems

--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -156,6 +156,7 @@
                             type="button"
                             alt="Hinweise zur aktuellen Darstellung"
                             title="Hinweise zur aktuellen Darstellung"
+                            aria-label="Hinweise zur aktuellen Darstellung"
                             (click)="hintsActive = !hintsActive"
                             i18n-alt
                             i18n-title>
