--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.html
@@ -74,7 +74,7 @@
                                        [(flurstueck)]="flurstueck"></power-bodenrichtwertkarte>
         </div>
         <div [class]="isCollapsed ? 'col-12 border-top' : 'col-lg-6 height-lg'">
-            <div class="row">
+            <div class="row border">
                 <div *ngIf="!adresse && !features"
                      class="text-center p-0"
                      [class]="isCollapsed ? 'col-12' : 'col-12 col-sm-10'">
