Fix missing aria text

--- a/power/src/app/fragebogen/editor/editor.component.html
+++ b/power/src/app/fragebogen/editor/editor.component.html
@@ -479,6 +479,8 @@
                                         <path fill-rule="evenodd"
                                               d="M11 5.5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793l-8.147 8.146a.5.5 0 0 0 .708.708L10 6.707V10.5a.5.5 0 0 0 1 0v-5z" />
                                     </svg>
+                                    <span class="sr-only"
+                                          i18n>Frage auf andere Seite verschieben</span>
                                 </button>
 
                                 <ul id="dropdown-basic-{{ i }}"
