--- a/power/src/app/shared/tagbox/tagbox.component.html
+++ b/power/src/app/shared/tagbox/tagbox.component.html
@@ -44,6 +44,8 @@
                     title="Löschen"
                     (click)="removeTag(i)">
                 <span aria-hidden="true">&times;</span>
+                <span class="sr-only"
+                      i18n>Löschen</span>
             </button>
         </span>
     </div>
