added dropdown for further functions

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.scss
@@ -45,6 +45,10 @@ mgl-map {
     color: #c4153a !important;
 }
 
+.dropdown-menu {
+    min-width: 100% !important;
+}
+
 $grid-breakpoints: (
     xs: 0,
     sm: 576px,
