--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -98,11 +98,9 @@
                             </svg> <span class="caret"
                                   aria-hidden="true"></span>
                         </button>
-                        <div id=""
+                        <div class="dropdown-menu"
                              *dropdownMenu
-                             class="dropdown-menu"
-                             role="menu"
-                             aria-labelledby="">
+                             role="menu">
                             <button class="btn dropdown-item"
                                     type="button"
                                     (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
@@ -244,13 +242,12 @@
                     <div class="btn-group d-flex">
                         <div class="btn-group"
                              role="group"
-                             dropdown>
-                            <button class="nav-link btn dropdown-toggle"
+                             dropdown
+                             [autoClose]="false">
+                            <button class="btn btn-block dropdown-toggle"
                                     type="button"
                                     dropdownToggle
-                                    id="dropdownMenuButton"
-                                    aria-haspopup="true"
-                                    aria-expanded="false">
+                                    aria-haspopup="true">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="20px"
                                      height="20px"
@@ -262,12 +259,11 @@
                                 </svg> <span class="caret"
                                       aria-hidden="true"></span>
                             </button>
-                            <div id=""
-                                 *dropdownMenu
+                            <div *dropdownMenu
                                  class="dropdown-menu"
-                                 role="menu"
-                                 aria-labelledby="">
+                                 role="menu">
                                 <button class="btn dropdown-item"
+                                        role="menuitem"
                                         type="button"
                                         (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
                                         alt="Flurstückssuche"
@@ -287,6 +283,7 @@
                                     </svg>
                                 </button>
                                 <button class="btn dropdown-item"
+                                        role="menuitem"
                                         type="button"
                                         (click)="enableLocationTracking()"
                                         alt="Eigenen Standort anzeigen"
@@ -305,9 +302,10 @@
                                               d="M4 4a4 4 0 1 1 4.5 3.969V13.5a.5.5 0 0 1-1 0V7.97A4 4 0 0 1 4 3.999zm2.493 8.574a.5.5 0 0 1-.411.575c-.712.118-1.28.295-1.655.493a1.319 1.319 0 0 0-.37.265.301.301 0 0 0-.057.09V14l.002.008a.147.147 0 0 0 .016.033.617.617 0 0 0 .145.15c.165.13.435.27.813.395.751.25 1.82.414 3.024.414s2.273-.163 3.024-.414c.378-.126.648-.265.813-.395a.619.619 0 0 0 .146-.15.148.148 0 0 0 .015-.033L12 14v-.004a.301.301 0 0 0-.057-.09 1.318 1.318 0 0 0-.37-.264c-.376-.198-.943-.375-1.655-.493a.5.5 0 1 1 .164-.986c.77.127 1.452.328 1.957.594C12.5 13 13 13.4 13 14c0 .426-.26.752-.544.977-.29.228-.68.413-1.116.558-.878.293-2.059.465-3.34.465-1.281 0-2.462-.172-3.34-.465-.436-.145-.826-.33-1.116-.558C3.26 14.752 3 14.426 3 14c0-.599.5-1 .961-1.243.505-.266 1.187-.467 1.957-.594a.5.5 0 0 1 .575.411z" />
                                     </svg>
                                 </button>
-                                <button class="btn dropdown-item"
+                                <button type="button"
+                                        role="menuitem"
+                                        class="dropdown-item dropdown-item2"
                                         [ngClass]="{'active': threeDActive}"
-                                        type="button"
                                         (click)="toggle3dView()"
                                         alt="3D aktivieren/deaktivieren"
                                         title="3D aktivieren/deaktivieren"
@@ -325,6 +323,27 @@
                                               d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694L1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z" />
                                         <path
                                               d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
+                                    </svg>
+                                </button>
+                                <button type="button"
+                                        role="menuitem"
+                                        class="btn dropdown-item"
+                                        alt="3D aktivieren/deaktivieren"
+                                        title="3D aktivieren/deaktivieren"
+                                        i18n-alt
+                                        i18n-title>
+                                    <svg xmlns="http://www.w3.org/2000/svg"
+                                         width="20px"
+                                         height="20px"
+                                         fill="currentColor"
+                                         class="bi bi-zoom-in"
+                                         viewBox="0 0 16 16">
+                                        <path fill-rule="evenodd"
+                                              d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                                        <path
+                                              d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z" />
+                                        <path fill-rule="evenodd"
+                                              d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z" />
                                     </svg>
                                 </button>
                                 <button class="btn dropdown-item"
