Fix editor crash

--- a/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
+++ b/power/src/app/fragebogen/editor/localeinput/localeinput.component.html
@@ -21,7 +21,7 @@
         <input [type]="type"
                class="form-control"
                [(ngModel)]="locale[displayLang]"
-               (change)="updateValue()"
+               (input)="updateValue()"
                [class.is-invalid]="required && !locale[displayLang]"
                [name]="eid"
                [id]="eid"
@@ -36,7 +36,7 @@
         <textarea class="form-control"
                   rows="5"
                   [(ngModel)]="locale[displayLang]"
-                  (change)="updateValue()"
+                  (input)="updateValue()"
                   [class.is-invalid]="required && !locale[displayLang]"
                   [name]="eid"
                   [id]="eid"
