--- a/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
+++ b/power/src/app/fragebogen/editor/question-settings/question-settings.component.html
@@ -2,7 +2,7 @@
              checkInvalid="true"
              (closing)="close($event)">
     <div class="container px-1 px-lg-3"
-         *ngIf="question !== null">
+         *ngIf="question !== null && model.pages[page].elements[question]">
         <accordion [isAnimated]="true"
                    [closeOthers]="true">
             <!-- common -->
