--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -92,7 +92,8 @@
                                  height="20px"
                                  fill="currentColor"
                                  class="bi bi-filter-right"
-                                 viewBox="0 0 16 16">
+                                 viewBox="0 0 16 16"
+                                 focusable="false">
                                 <path
                                       d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z" />
                             </svg> <span class="caret"
@@ -253,7 +254,8 @@
                                      height="20px"
                                      fill="currentColor"
                                      class="bi bi-filter-right"
-                                     viewBox="0 0 16 16">
+                                     viewBox="0 0 16 16"
+                                     focusable="false">
                                     <path
                                           d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z" />
                                 </svg> <span class="caret"
@@ -337,7 +339,8 @@
                                          height="20px"
                                          fill="currentColor"
                                          class="bi bi-zoom-in"
-                                         viewBox="0 0 16 16">
+                                         viewBox="0 0 16 16"
+                                         focusable="false">
                                         <path fill-rule="evenodd"
                                               d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                                         <path
