added GAG Kontakt Link

--- a/power/src/app/app.component.html
+++ b/power/src/app/app.component.html
@@ -371,6 +371,13 @@
                             i18n>Bodenrichtwerte</h5>
                         <ul class="list-unstyled text-small">
                             <li class="my-1">
+                                <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/kontakt/kontakt-88078.html"
+                                   class="footer-link"
+                                   target="_blank"
+                                   rel="noopener noreferrer nofollow"
+                                   i18n>Kontakt</a>
+                            </li>
+                            <li class="my-1">
                                 <a href="https://www.gag.niedersachsen.de/startseite/gutachterausschusse/gutachterausschuesse-88016.html"
                                    class="footer-link"
                                    target="_blank"
@@ -390,13 +397,6 @@
                                    target="_blank"
                                    rel="noopener noreferrer nofollow"
                                    i18n>Legende zur Bodenrichtwertkarte Landwirtschaft</a>
-                            </li>
-                            <li class="my-1">
-                                <a href=""
-                                   class="footer-link"
-                                   target="_blank"
-                                   rel="noopener noreferrer nofollow"
-                                   i18n>Tableau - WIP</a>
                             </li>
                         </ul>
                     </div>
