--- a/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-component/bodenrichtwert.component.css
@@ -46,7 +46,12 @@
     height: 57px;
 }
 
-.nav-link:hover {
+a.nav-link:hover {
+    color: #c4153a;
+    cursor: pointer;
+}
+
+.nav-link:hover:enabled {
     color: #c4153a;
     cursor: pointer;
 }
