--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -93,7 +93,8 @@
                                  fill="currentColor"
                                  class="bi bi-filter-right"
                                  viewBox="0 0 16 16"
-                                 focusable="false">
+                                 focusable="false"
+                                 aria-hidden="true">
                                 <path
                                       d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z" />
                             </svg> <span class="caret"
@@ -104,6 +105,7 @@
                              role="menu">
                             <button class="btn dropdown-item"
                                     type="button"
+                                    role="menuitem"
                                     (click)="flurstueckssearch.modal.open(flurstueckssearch.title)"
                                     alt="Flurstückssuche"
                                     title="Flurstückssuche"
@@ -123,6 +125,7 @@
                             </button>
                             <button class="btn dropdown-item"
                                     type="button"
+                                    role="menuitem"
                                     (click)="enableLocationTracking()"
                                     alt="Eigenen Standort anzeigen"
                                     title="Eigenen Standort anzeigen"
@@ -143,6 +146,7 @@
                             <button class="btn dropdown-item"
                                     [ngClass]="{'active': threeDActive}"
                                     type="button"
+                                    role="menuitem"
                                     (click)="toggle3dView()"
                                     alt="3D aktivieren/deaktivieren"
                                     title="3D aktivieren/deaktivieren"
@@ -162,8 +166,34 @@
                                           d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
                                 </svg>
                             </button>
+                            <button *ngIf="marker.getLngLat() && marker.getLngLat().lat != 0"
+                                    type="button"
+                                    role="menuitem"
+                                    class="btn dropdown-item"
+                                    alt="Markierung fokussieren"
+                                    title="Markierung fokussieren"
+                                    (click)="flyTo(marker.getLngLat().lat, marker.getLngLat().lng, $event.type)"
+                                    i18n-alt
+                                    i18n-title>
+                                <svg xmlns="http://www.w3.org/2000/svg"
+                                     width="20px"
+                                     height="20px"
+                                     fill="currentColor"
+                                     class="bi bi-zoom-in"
+                                     viewBox="0 0 16 16"
+                                     focusable="false"
+                                     aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                          d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
+                                    <path
+                                          d="M10.344 11.742c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1 6.538 6.538 0 0 1-1.398 1.4z" />
+                                    <path fill-rule="evenodd"
+                                          d="M6.5 3a.5.5 0 0 1 .5.5V6h2.5a.5.5 0 0 1 0 1H7v2.5a.5.5 0 0 1-1 0V7H3.5a.5.5 0 0 1 0-1H6V3.5a.5.5 0 0 1 .5-.5z" />
+                                </svg>
+                            </button>
                             <button class="btn dropdown-item"
                                     type="button"
+                                    role="menuitem"
                                     (click)="resetMap()"
                                     alt="Karte zurücksetzen"
                                     title="Karte zurücksetzen"
@@ -248,14 +278,16 @@
                             <button class="btn btn-block dropdown-toggle"
                                     type="button"
                                     dropdownToggle
-                                    aria-haspopup="true">
+                                    aria-haspopup="true"
+                                    aria-expanded="false">
                                 <svg xmlns="http://www.w3.org/2000/svg"
                                      width="20px"
                                      height="20px"
                                      fill="currentColor"
                                      class="bi bi-filter-right"
                                      viewBox="0 0 16 16"
-                                     focusable="false">
+                                     focusable="false"
+                                     aria-hidden="true">
                                     <path
                                           d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z" />
                                 </svg> <span class="caret"
@@ -327,11 +359,13 @@
                                               d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z" />
                                     </svg>
                                 </button>
-                                <button type="button"
+                                <button *ngIf="marker.getLngLat() && marker.getLngLat().lat != 0"
+                                        type="button"
                                         role="menuitem"
                                         class="btn dropdown-item"
-                                        alt="3D aktivieren/deaktivieren"
-                                        title="3D aktivieren/deaktivieren"
+                                        alt="Markierung fokussieren"
+                                        title="Markierung fokussieren"
+                                        (click)="flyTo(marker.getLngLat().lat, marker.getLngLat().lng, $event.type)"
                                         i18n-alt
                                         i18n-title>
                                     <svg xmlns="http://www.w3.org/2000/svg"
@@ -340,7 +374,8 @@
                                          fill="currentColor"
                                          class="bi bi-zoom-in"
                                          viewBox="0 0 16 16"
-                                         focusable="false">
+                                         focusable="false"
+                                         aria-hidden="true">
                                         <path fill-rule="evenodd"
                                               d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z" />
                                         <path
@@ -351,6 +386,7 @@
                                 </button>
                                 <button class="btn dropdown-item"
                                         type="button"
+                                        role="menuitem"
                                         (click)="resetMap()"
                                         alt="Karte zurücksetzen"
                                         title="Karte zurücksetzen"
