--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -8,7 +8,8 @@
                     <div class="btn-group d-flex">
                         <div class="btn-group"
                              role="group"
-                             dropdown>
+                             dropdown
+                             [autoClose]="false">
                             <button id="button-stichtage-1"
                                     dropdownToggle
                                     type="button"
