dropdown alignment right

--- a/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-karte/bodenrichtwert-karte.component.html
@@ -101,7 +101,7 @@
                             </svg> <span class="caret"
                                   aria-hidden="true"></span>
                         </button>
-                        <div class="dropdown-menu"
+                        <div class="dropdown-menu dropdown-menu-right"
                              *dropdownMenu
                              role="menu">
                             <button class="btn dropdown-item"
@@ -295,7 +295,7 @@
                                       aria-hidden="true"></span>
                             </button>
                             <div *dropdownMenu
-                                 class="dropdown-menu"
+                                 class="dropdown-menu dropdown-menu-right"
                                  role="menu">
                                 <button class="btn dropdown-item"
                                         role="menuitem"
