Umrechnungsdatei mit HTTPS verlinken

--- a/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
+++ b/power/src/app/bodenrichtwert/bodenrichtwert-detail/bodenrichtwert-detail.component.html
@@ -259,7 +259,7 @@
                        role="button"
                        title="Umrechnungsdatei"
                        i18n-title
-                       [href]="umrechnung.dateiname.substr(0, umrechnung.dateiname.lastIndexOf('.')) + '.pdf'"
+                       [href]="umrechnung.dateiname.substr(0, umrechnung.dateiname.lastIndexOf('.')).replace('http://', 'https://') + '.pdf'"
                        target="_blank"
                        rel="noopener noreferrer nofollow">
                         {{umrechnung.text | einflussgroesse}}
